# chapter-extractor

./: .gitignore  pyproject.toml
desktop/: electron.vite.config.ts  package-lock.json  package.json
desktop/src/main/: AppLifecycle.ts  GpuFlags.ts  IpcRouter.ts  MainWindow.ts  WindowChrome.ts  index.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: index.html
desktop/src/renderer/src/: App.module.css  App.tsx  main.tsx
desktop/src/renderer/src/components/: ElectricBorder.tsx  SplashCanvas.tsx  TitleBar.tsx  TrafficLight.tsx  TrafficLights.tsx
desktop/src/renderer/src/components/ElectricBorder/: ElectricBorder.module.css  ElectricBorder.tsx
desktop/src/renderer/src/splash/: DustParticles.ts  MsdfTextEntity.ts  PetalParticles.ts  SplashOrchestrator.ts  WebGpuRenderer.ts  splashTokens.ts
desktop/src/renderer/src/styles/: globals.css  reset.css  tokens.css
desktop/src/renderer/src/theme/: tokens.ts
scripts/: build_exe.py
src/chapter_extractor/: __init__.py  __main__.py
src/chapter_extractor/domain/: enums.py  models.py  protocols.py  shortcuts.py
src/chapter_extractor/infrastructure/: app_context.py  cleanup.py  clipboard.py  paths.py  settings.py  theme.py  window_manager.py
src/chapter_extractor/services/: parser.py  slugify.py
src/chapter_extractor/services/db/: chapter_repo.py  engine.py  mappers.py  migrator.py  orm_base.py  project_repo.py  registry_repo.py  tables_project.py  tables_registry.py
src/chapter_extractor/viewmodels/: batch_input_vm.py  chapter_filter_proxy.py  chapter_list_model.py  chapter_list_vm.py  main_vm.py  project_list_vm.py  reader_vm.py  trash_vm.py
src/chapter_extractor/views/: application.py  chapter_list_pane.py  empty_state.py  main_window.py  menu_builder.py  reader_pane.py  reader_window.py  sidebar.py  style.py
src/chapter_extractor/views/dialogs/: batch_input_dialog.py  new_project_dialog.py  shortcuts_dialog.py  trash_dialog.py
src/chapter_extractor/views/theme/: palettes.py  stylesheet.py  tokens.py
src/chapter_extractor/views/widgets/: app_titlebar.py  chapter_html_renderer.py  reader_text.py  search_box.py
tests/: conftest.py  test_alt_shortcuts.py  test_app_paths.py  test_batch_input_dialog_smoke.py  test_batch_input_vm.py  test_build_exe_command.py  test_chapter_filter_proxy.py  test_chapter_list_model.py  test_chapter_list_pane_smoke.py  test_chapter_list_vm.py  test_chapter_repo.py  test_db_engine.py  test_db_migration.py  test_focus_mode.py  test_main_vm.py  test_main_window_smoke.py  test_menu_builder_smoke.py  test_parser.py  test_project_list_vm.py  test_project_repo_db.py  test_reader_pane_smoke.py  test_reader_vm.py  test_reader_window_smoke.py  test_registry_app_settings.py  test_registry_repo.py  test_settings_store.py  test_shortcut_catalog.py  test_shortcuts_dialog_smoke.py  test_slugify.py  test_theme_tokens.py  test_trash_dialog_smoke.py  test_trash_vm.py
