[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chapter-extractor"
version = "0.1.0"
description = "Desktop app for extracting batch chapters into individual files."
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0",
    "platformdirs>=4.0",
    "PySide6>=6.7",
    "pyqtdarktheme>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "ruff>=0.6",
]

[project.scripts]
chapter-extractor = "chapter_extractor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-q"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Qt overrides require camelCase to match the Qt C++ API contract.
"src/chapter_extractor/viewmodels/*.py" = ["N802"]
